@@ -31,6 +31,19 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
+import com.web.gallery.domain.account.AccountId;
+import com.web.gallery.domain.account.AccountNo;
+import com.web.gallery.domain.common.Address;
+import com.web.gallery.domain.common.Latitude;
+import com.web.gallery.domain.common.LocationName;
+import com.web.gallery.domain.common.Longitude;
+import com.web.gallery.domain.photo.Caption;
+import com.web.gallery.domain.photo.FavoriteCount;
+import com.web.gallery.domain.photo.ImageFilePath;
+import com.web.gallery.domain.photo.IsFavorite;
+import com.web.gallery.domain.photo.IsFavoriteOnly;
+import com.web.gallery.domain.photo.PhotoAt;
+import com.web.gallery.domain.photo.PhotoNo;
 import com.web.gallery.config.PhotoConfig;
 import com.web.gallery.controller.response.PhotoListGetResponse;
 import com.web.gallery.enumuration.DirectionEnum;
@@ -83,79 +96,79 @@ public class PhotoRestControllerTest {
 		private List<PhotoModel> createPhotoModelList() {
 			List<PhotoModel> photoList = new ArrayList<PhotoModel>();
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(1L)
-					.favoriteCount(1)
-					.isFavorite(false)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC111.jpg")
-					.caption("キャプション1")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(1L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(false))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC111.jpg"))
+					.caption(new Caption("キャプション1"))
 					.directionKbn(DirectionEnum.VERTICAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(2L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC222.jpg")
-					.caption("キャプション2")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(2L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC222.jpg"))
+					.caption(new Caption("キャプション2"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(3L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC333.jpg")
-					.caption("キャプション3")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(3L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC333.jpg"))
+					.caption(new Caption("キャプション3"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(4L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC444.jpg")
-					.caption("キャプション4")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(4L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC444.jpg"))
+					.caption(new Caption("キャプション4"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(5L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC555.jpg")
-					.caption("キャプション5")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(5L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC555.jpg"))
+					.caption(new Caption("キャプション5"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(6L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC666.jpg")
-					.caption("キャプション6")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(6L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC666.jpg"))
+					.caption(new Caption("キャプション6"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(7L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC777.jpg")
-					.caption("キャプション7")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(7L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC777.jpg"))
+					.caption(new Caption("キャプション7"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
@@ -199,10 +212,10 @@ public class PhotoRestControllerTest {
 				.andExpect(jsonPath("$.photoList[2].directionKbn").value("horizontal"));
 
 			PhotoListGetModel photoListGetModel = photoListGetModelCaptor.getValue();
-			assertEquals(1L, photoListGetModel.getAccountNo());
-			assertEquals("aaaaaaaa", photoListGetModel.getPhotoAccountId());
+			assertEquals(new AccountNo(1L), photoListGetModel.getAccountNo());
+			assertEquals(new AccountId("aaaaaaaa"), photoListGetModel.getPhotoAccountId());
 			assertEquals(DirectionEnum.NONE, photoListGetModel.getDirectionKbn());
-			assertFalse(photoListGetModel.getIsFavoriteOnly());
+			assertFalse(photoListGetModel.getIsFavoriteOnly().value());
 			assertEquals(new ArrayList<String>(), photoListGetModel.getTagList());
 			assertEquals(SortPhotoEnum.PHOTO_AT, photoListGetModel.getSortBy());
 		}
@@ -236,10 +249,10 @@ public class PhotoRestControllerTest {
 				.andExpect(jsonPath("$.photoList[0].directionKbn").value("horizontal"));
 
 			PhotoListGetModel photoListGetModel = photoListGetModelCaptor.getValue();
-			assertEquals(1L, photoListGetModel.getAccountNo());
-			assertEquals("aaaaaaaa", photoListGetModel.getPhotoAccountId());
+			assertEquals(new AccountNo(1L), photoListGetModel.getAccountNo());
+			assertEquals(new AccountId("aaaaaaaa"), photoListGetModel.getPhotoAccountId());
 			assertEquals(DirectionEnum.VERTICAL, photoListGetModel.getDirectionKbn());
-			assertTrue(photoListGetModel.getIsFavoriteOnly());
+			assertTrue(photoListGetModel.getIsFavoriteOnly().value());
 			assertEquals("太陽", photoListGetModel.getTagList().get(0));
 			assertEquals("海", photoListGetModel.getTagList().get(1));
 			assertEquals(SortPhotoEnum.SEASON, photoListGetModel.getSortBy());
@@ -274,10 +287,10 @@ public class PhotoRestControllerTest {
 				.andExpect(jsonPath("$.photoList[0].directionKbn").value("horizontal"));
 
 			PhotoListGetModel photoListGetModel = photoListGetModelCaptor.getValue();
-			assertEquals(1L, photoListGetModel.getAccountNo());
-			assertEquals("aaaaaaaa", photoListGetModel.getPhotoAccountId());
+			assertEquals(new AccountNo(1L), photoListGetModel.getAccountNo());
+			assertEquals(new AccountId("aaaaaaaa"), photoListGetModel.getPhotoAccountId());
 			assertEquals(DirectionEnum.VERTICAL, photoListGetModel.getDirectionKbn());
-			assertTrue(photoListGetModel.getIsFavoriteOnly());
+			assertTrue(photoListGetModel.getIsFavoriteOnly().value());
 			assertEquals("太陽", photoListGetModel.getTagList().get(0));
 			assertEquals("海", photoListGetModel.getTagList().get(1));
 			assertEquals(SortPhotoEnum.SEASON, photoListGetModel.getSortBy());
@@ -301,10 +314,10 @@ public class PhotoRestControllerTest {
 				.andExpect(jsonPath("$.photoList.length()").value(0));
 
 			PhotoListGetModel photoListGetModel = photoListGetModelCaptor.getValue();
-			assertEquals(1L, photoListGetModel.getAccountNo());
-			assertEquals("aaaaaaaa", photoListGetModel.getPhotoAccountId());
+			assertEquals(new AccountNo(1L), photoListGetModel.getAccountNo());
+			assertEquals(new AccountId("aaaaaaaa"), photoListGetModel.getPhotoAccountId());
 			assertEquals(DirectionEnum.NONE, photoListGetModel.getDirectionKbn());
-			assertFalse(photoListGetModel.getIsFavoriteOnly());
+			assertFalse(photoListGetModel.getIsFavoriteOnly().value());
 			assertEquals(new ArrayList<String>(), photoListGetModel.getTagList());
 			assertEquals(SortPhotoEnum.PHOTO_AT, photoListGetModel.getSortBy());
 		}
@@ -346,7 +359,7 @@ public class PhotoRestControllerTest {
 
 			List<PhotoDetailModel> photoDetailModelList = photoDetailModelCaptor.getValue();
 			assertEquals(1, photoDetailModelList.size());
-			assertEquals(1L, photoDetailModelList.getFirst().getAccountNo());
+			assertEquals(new AccountNo(1L), photoDetailModelList.getFirst().getAccountNo());
 			assertNull(photoDetailModelList.getFirst().getPhotoNo());
 			assertNull(photoDetailModelList.getFirst().getIsFavorite());
 			assertNull(photoDetailModelList.getFirst().getPhotoAt());
@@ -356,7 +369,7 @@ public class PhotoRestControllerTest {
 			assertNull(photoDetailModelList.getFirst().getLongitude());
 			assertNull(photoDetailModelList.getFirst().getLocationName());
 			assertNotNull(photoDetailModelList.getFirst().getImageFile());
-			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath());
+			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath().value());
 			assertNull(photoDetailModelList.getFirst().getPhotoJapaneseTitle());
 			assertNull(photoDetailModelList.getFirst().getPhotoEnglishTitle());
 			assertNull(photoDetailModelList.getFirst().getCaption());
@@ -432,32 +445,32 @@ public class PhotoRestControllerTest {
 
 			List<PhotoDetailModel> photoDetailModelList = photoDetailModelCaptor.getValue();
 			assertEquals(1, photoDetailModelList.size());
-			assertEquals(1L, photoDetailModelList.getFirst().getAccountNo());
-			assertEquals(1L, photoDetailModelList.getFirst().getPhotoNo());
-			assertFalse(photoDetailModelList.getFirst().getIsFavorite());
-			assertEquals(OffsetDateTime.of(2000, 12, 1, 0, 0, 0, 0, ZoneOffset.ofHours(9)), photoDetailModelList.getFirst().getPhotoAt());
-			assertEquals(1L, photoDetailModelList.getFirst().getLocationNo());
-			assertEquals(address, photoDetailModelList.getFirst().getAddress());
-			assertEquals(0, BigDecimal.valueOf(35.000).compareTo(photoDetailModelList.getFirst().getLatitude()));
-			assertEquals(0, BigDecimal.valueOf(135.000).compareTo(photoDetailModelList.getFirst().getLongitude()));
-			assertEquals(locationName, photoDetailModelList.getFirst().getLocationName());
+			assertEquals(new AccountNo(1L), photoDetailModelList.getFirst().getAccountNo());
+			assertEquals(1L, photoDetailModelList.getFirst().getPhotoNo().value());
+			assertFalse(photoDetailModelList.getFirst().getIsFavorite().value());
+			assertEquals(OffsetDateTime.of(2000, 12, 1, 0, 0, 0, 0, ZoneOffset.ofHours(9)), photoDetailModelList.getFirst().getPhotoAt().value());
+			assertEquals(1L, photoDetailModelList.getFirst().getLocationNo().value());
+			assertEquals(address, photoDetailModelList.getFirst().getAddress().value());
+			assertEquals(0, BigDecimal.valueOf(35.000).compareTo(photoDetailModelList.getFirst().getLatitude().value()));
+			assertEquals(0, BigDecimal.valueOf(135.000).compareTo(photoDetailModelList.getFirst().getLongitude().value()));
+			assertEquals(locationName, photoDetailModelList.getFirst().getLocationName().value());
 			assertNotNull(photoDetailModelList.getFirst().getImageFile());
-			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath());
-			assertEquals(photoJapaneseTitle, photoDetailModelList.getFirst().getPhotoJapaneseTitle());
-			assertEquals(photoEnglishTitle, photoDetailModelList.getFirst().getPhotoEnglishTitle());
-			assertEquals(caption, photoDetailModelList.getFirst().getCaption());
+			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath().value());
+			assertEquals(photoJapaneseTitle, photoDetailModelList.getFirst().getPhotoJapaneseTitle().value());
+			assertEquals(photoEnglishTitle, photoDetailModelList.getFirst().getPhotoEnglishTitle().value());
+			assertEquals(caption, photoDetailModelList.getFirst().getCaption().value());
 			assertEquals(DirectionEnum.VERTICAL, photoDetailModelList.getFirst().getDirectionKbn());
-			assertEquals(50, photoDetailModelList.getFirst().getFocalLength());
-			assertEquals(0, BigDecimal.valueOf(8.0).compareTo(photoDetailModelList.getFirst().getFValue()));
-			assertEquals(0, BigDecimal.valueOf(0.001).compareTo(photoDetailModelList.getFirst().getShutterSpeed()));
-			assertEquals(100, photoDetailModelList.getFirst().getIso());
+			assertEquals(50, photoDetailModelList.getFirst().getFocalLength().value());
+			assertEquals(0, BigDecimal.valueOf(8.0).compareTo(photoDetailModelList.getFirst().getFValue().value()));
+			assertEquals(0, BigDecimal.valueOf(0.001).compareTo(photoDetailModelList.getFirst().getShutterSpeed().value()));
+			assertEquals(100, photoDetailModelList.getFirst().getIso().value());
 
-			assertEquals(1L, photoDetailModelList.getFirst().getPhotoTagModelList().get(0).getTagNo());
-			assertEquals("太陽", photoDetailModelList.getFirst().getPhotoTagModelList().get(0).getTagJapaneseName());
-			assertEquals("sun", photoDetailModelList.getFirst().getPhotoTagModelList().get(0).getTagEnglishName());
-			assertEquals(2L, photoDetailModelList.getFirst().getPhotoTagModelList().get(1).getTagNo());
-			assertEquals("海", photoDetailModelList.getFirst().getPhotoTagModelList().get(1).getTagJapaneseName());
-			assertEquals("", photoDetailModelList.getFirst().getPhotoTagModelList().get(1).getTagEnglishName());
+			assertEquals(1L, photoDetailModelList.getFirst().getPhotoTagModelList().get(0).getTagNo().value());
+			assertEquals("太陽", photoDetailModelList.getFirst().getPhotoTagModelList().get(0).getTagJapaneseName().value());
+			assertEquals("sun", photoDetailModelList.getFirst().getPhotoTagModelList().get(0).getTagEnglishName().value());
+			assertEquals(2L, photoDetailModelList.getFirst().getPhotoTagModelList().get(1).getTagNo().value());
+			assertEquals("海", photoDetailModelList.getFirst().getPhotoTagModelList().get(1).getTagJapaneseName().value());
+			assertEquals("", photoDetailModelList.getFirst().getPhotoTagModelList().get(1).getTagEnglishName().value());
 
 			assertEquals("aaaaaaaa", photoAcountIdCaptor.getValue());
 		}
@@ -580,8 +593,8 @@ public class PhotoRestControllerTest {
 
 			List<PhotoDetailModel> photoDetailModelList = photoDetailModelCaptor.getValue();
 			assertEquals(1, photoDetailModelList.size());
-			assertEquals(1L, photoDetailModelList.getFirst().getAccountNo());
-			assertEquals(1L, photoDetailModelList.getFirst().getPhotoNo());
+			assertEquals(new AccountNo(1L), photoDetailModelList.getFirst().getAccountNo());
+			assertEquals(1L, photoDetailModelList.getFirst().getPhotoNo().value());
 			assertNull(photoDetailModelList.getFirst().getIsFavorite());
 			assertNull(photoDetailModelList.getFirst().getPhotoAt());
 			assertNull(photoDetailModelList.getFirst().getLocationNo());
@@ -590,7 +603,7 @@ public class PhotoRestControllerTest {
 			assertNull(photoDetailModelList.getFirst().getLongitude());
 			assertNull(photoDetailModelList.getFirst().getLocationName());
 			assertNotNull(photoDetailModelList.getFirst().getImageFile());
-			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath());
+			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath().value());
 			assertNull(photoDetailModelList.getFirst().getPhotoJapaneseTitle());
 			assertNull(photoDetailModelList.getFirst().getPhotoEnglishTitle());
 			assertNull(photoDetailModelList.getFirst().getCaption());
@@ -635,8 +648,8 @@ public class PhotoRestControllerTest {
 
 			List<PhotoDetailModel> photoDetailModelList = photoDetailModelCaptor.getValue();
 			assertEquals(1, photoDetailModelList.size());
-			assertEquals(1L, photoDetailModelList.getFirst().getAccountNo());
-			assertEquals(1L, photoDetailModelList.getFirst().getPhotoNo());
+			assertEquals(new AccountNo(1L), photoDetailModelList.getFirst().getAccountNo());
+			assertEquals(1L, photoDetailModelList.getFirst().getPhotoNo().value());
 			assertNull(photoDetailModelList.getFirst().getIsFavorite());
 			assertNull(photoDetailModelList.getFirst().getPhotoAt());
 			assertNull(photoDetailModelList.getFirst().getLocationNo());
@@ -645,7 +658,7 @@ public class PhotoRestControllerTest {
 			assertNull(photoDetailModelList.getFirst().getLongitude());
 			assertNull(photoDetailModelList.getFirst().getLocationName());
 			assertNotNull(photoDetailModelList.getFirst().getImageFile());
-			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath());
+			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath().value());
 			assertNull(photoDetailModelList.getFirst().getPhotoJapaneseTitle());
 			assertNull(photoDetailModelList.getFirst().getPhotoEnglishTitle());
 			assertNull(photoDetailModelList.getFirst().getCaption());
@@ -690,8 +703,8 @@ public class PhotoRestControllerTest {
 
 			List<PhotoDetailModel> photoDetailModelList = photoDetailModelCaptor.getValue();
 			assertEquals(1, photoDetailModelList.size());
-			assertEquals(1L, photoDetailModelList.getFirst().getAccountNo());
-			assertEquals(1L, photoDetailModelList.getFirst().getPhotoNo());
+			assertEquals(new AccountNo(1L), photoDetailModelList.getFirst().getAccountNo());
+			assertEquals(1L, photoDetailModelList.getFirst().getPhotoNo().value());
 			assertNull(photoDetailModelList.getFirst().getIsFavorite());
 			assertNull(photoDetailModelList.getFirst().getPhotoAt());
 			assertNull(photoDetailModelList.getFirst().getLocationNo());
@@ -700,7 +713,7 @@ public class PhotoRestControllerTest {
 			assertNull(photoDetailModelList.getFirst().getLongitude());
 			assertNull(photoDetailModelList.getFirst().getLocationName());
 			assertNotNull(photoDetailModelList.getFirst().getImageFile());
-			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath());
+			assertEquals(imageFilePath, photoDetailModelList.getFirst().getImageFilePath().value());
 			assertNull(photoDetailModelList.getFirst().getPhotoJapaneseTitle());
 			assertNull(photoDetailModelList.getFirst().getPhotoEnglishTitle());
 			assertNull(photoDetailModelList.getFirst().getCaption());
@@ -742,9 +755,9 @@ public class PhotoRestControllerTest {
 
 			List<PhotoDeleteModel> photoDeleteModelList = photoDeleteModelCaptor.getValue();
 			assertEquals(1, photoDeleteModelList.size());
-			assertEquals(1L, photoDeleteModelList.getFirst().getAccountNo());
-			assertEquals(1L, photoDeleteModelList.getFirst().getPhotoNo());
-			assertEquals(imageFilePath, photoDeleteModelList.getFirst().getImageFilePath());
+			assertEquals(new AccountNo(1L), photoDeleteModelList.getFirst().getAccountNo());
+			assertEquals(1L, photoDeleteModelList.getFirst().getPhotoNo().value());
+			assertEquals(imageFilePath, photoDeleteModelList.getFirst().getImageFilePath().value());
 			assertEquals("aaaaaaaa", photoAcountIdCaptor.getValue());
 		}
 
@@ -796,9 +809,9 @@ public class PhotoRestControllerTest {
 
 			List<PhotoDeleteModel> photoDeleteModelList = photoDeleteModelCaptor.getValue();
 			assertEquals(1, photoDeleteModelList.size());
-			assertEquals(1L, photoDeleteModelList.getFirst().getAccountNo());
-			assertEquals(1L, photoDeleteModelList.getFirst().getPhotoNo());
-			assertEquals(imageFilePath, photoDeleteModelList.getFirst().getImageFilePath());
+			assertEquals(new AccountNo(1L), photoDeleteModelList.getFirst().getAccountNo());
+			assertEquals(1L, photoDeleteModelList.getFirst().getPhotoNo().value());
+			assertEquals(imageFilePath, photoDeleteModelList.getFirst().getImageFilePath().value());
 			assertEquals("aaaaaaaa", photoAcountIdCaptor.getValue());
 		}
 	}
@@ -810,79 +823,79 @@ public class PhotoRestControllerTest {
 		private List<PhotoModel> createPhotoList() {
 			List<PhotoModel> photoList = new ArrayList<PhotoModel>();
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(1L)
-					.favoriteCount(1)
-					.isFavorite(false)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC111.jpg")
-					.caption("キャプション1")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(1L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(false))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC111.jpg"))
+					.caption(new Caption("キャプション1"))
 					.directionKbn(DirectionEnum.VERTICAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(2L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC222.jpg")
-					.caption("キャプション2")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(2L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC222.jpg"))
+					.caption(new Caption("キャプション2"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(3L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC333.jpg")
-					.caption("キャプション3")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(3L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC333.jpg"))
+					.caption(new Caption("キャプション3"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(4L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC444.jpg")
-					.caption("キャプション4")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(4L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC444.jpg"))
+					.caption(new Caption("キャプション4"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(5L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC555.jpg")
-					.caption("キャプション5")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(5L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC555.jpg"))
+					.caption(new Caption("キャプション5"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(6L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC666.jpg")
-					.caption("キャプション6")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(6L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC666.jpg"))
+					.caption(new Caption("キャプション6"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
 			photoList.add(PhotoModel.builder()
-					.accountNo(1L)
-					.photoNo(7L)
-					.favoriteCount(1)
-					.isFavorite(true)
-					.photoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0)))
-					.imageFilePath("https://localhost:8080/image/aaaaaaaa/DSC777.jpg")
-					.caption("キャプション7")
+					.accountNo(new AccountNo(1L))
+					.photoNo(new PhotoNo(7L))
+					.favoriteCount(new FavoriteCount(1))
+					.isFavorite(new IsFavorite(true))
+					.photoAt(new PhotoAt(OffsetDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.ofHours(0))))
+					.imageFilePath(new ImageFilePath("https://localhost:8080/image/aaaaaaaa/DSC777.jpg"))
+					.caption(new Caption("キャプション7"))
 					.directionKbn(DirectionEnum.HORIZONTAL)
 					.photoTagModelList(new ArrayList<PhotoTagModel>())
 					.build());
